--- a/public/frontend/compra_pac.html
+++ b/public/frontend/compra_pac.html
@@ -10,7 +10,7 @@
         <link href="/frontend/css/figurine.css" rel="stylesheet">
     </head>
     <body>
-        <!--Bootstrap Bundle con Popper (?)-->
+        <!--Bootstrap Bundle con Popper-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
         <div class="w-100 h-100 d-flex text-center bg-darkred bg-scroll overflow-auto flex-column text-white">
@@ -46,12 +46,8 @@
             <header class="py-3 mb-4">
                 <div class="container d-flex flex-wrap justify-content-center">
                     <a href="" class="d-flex align-items-center mb-3 mb-lg-0 me-lg-auto text-dark text-decoration-none">
-                        <!-- <svg class="bi me-2" width="40" height="32"></svg> -->
                         <span class="fs-4 text-white">MarvelHeroes</span>
                     </a>
-                    <!-- <form class="col-12 col-lg-auto mb-3 mb-lg-0">
-                        <input type="search" class="form-control" placeholder="Cerca figurine..." aria-label="Search">
-                    </form> -->
                 </div>
             </header>
             <main class="container py-4">
