--- a/public/frontend/myalbum.html
+++ b/public/frontend/myalbum.html
@@ -9,7 +9,7 @@
         <link href="/frontend/css/homepage.css" rel="stylesheet">
     </head>
     <body class="d-flex text-center bg-darkred text-white">
-        <!--Bootstrap Bundle con Popper (?)-->
+        <!--Bootstrap Bundle con Popper-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         
         <!--header-->
@@ -46,7 +46,6 @@
             <header class="py-3 mb-4">
                 <div class="container d-flex flex-wrap justify-content-center">
                     <a href="" class="d-flex align-items-center mb-3 mb-lg-0 me-lg-auto text-dark text-decoration-none">
-                        <!-- <svg class="bi me-2" width="40" height="32"></svg> -->
                         <span class="fs-4 text-white">MarvelHeroes</span>
                     </a>
                     <form class="col-12 col-lg-auto mb-3 mb-lg-0" id="search-form">
