--- a/public/frontend/myprofile.html
+++ b/public/frontend/myprofile.html
@@ -9,7 +9,7 @@
         <link href="/frontend/css/homepage.css" rel="stylesheet">
     </head>
     <body class="d-flex text-center bg-darkred text-white">
-        <!--Bootstrap Bundle con Popper (?)-->
+        <!--Bootstrap Bundle con Popper-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         
         <!--header-->
@@ -46,7 +46,6 @@
             <header class="py-3 mb-4">
                 <div class="container d-flex flex-wrap justify-content-center">
                     <a href="" class="d-flex align-items-center mb-3 mb-lg-0 me-lg-auto text-dark text-decoration-none">
-                        <!-- <svg class="bi me-2" width="40" height="32"></svg> -->
                         <span class="fs-4 text-white">MarvelHeroes</span>
                     </a>
                 </div>
@@ -84,6 +83,18 @@
                         </label>
                         
                         <button class="m-3 btn btn-lg fw-bold bg-white" type="submit">Modifica</button>
+                    </form>
+                  </section>
+
+                  <section id="delete-profile" class="container mt-5 text-start lh-lg">
+                    <h2 class="mb-4">Vuoi cancellare il tuo profilo?</h2>
+                    <p class="text-danger">Attenzione: cancellare il tuo profilo è un'operazione permanente e non reversibile.</p>
+                    <form id="delete-profile-form">
+                        <div class="form-group">
+                            <label for="confirm-password">Conferma inserendo la tua password:</label>
+                            <input type="password" class="form-control" id="delete-password" placeholder="password">
+                            <button class="m-3 btn btn-lg fw-bold bg-warning" type="submit">Cancella</button>
+                        </div>
                     </form>
                   </section>
             </main>
